--- a/Contrasive_Learning.ipynb
+++ b/Contrasive_Learning.ipynb
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -169,7 +169,29 @@
             "      Successfully uninstalled nvidia-cuda-runtime-cu12-12.5.82\n",
             "  Attempting uninstall: nvidia-cuda-nvrtc-cu12\n",
             "    Found existing installation: nvidia-cuda-nvrtc-cu12 12.5.82\n",
-            "    Uninstalling nvidia-cuda-nvrtc-cu12-12.5.82:\n"
+            "    Uninstalling nvidia-cuda-nvrtc-cu12-12.5.82:\n",
+            "      Successfully uninstalled nvidia-cuda-nvrtc-cu12-12.5.82\n",
+            "  Attempting uninstall: nvidia-cuda-cupti-cu12\n",
+            "    Found existing installation: nvidia-cuda-cupti-cu12 12.5.82\n",
+            "    Uninstalling nvidia-cuda-cupti-cu12-12.5.82:\n",
+            "      Successfully uninstalled nvidia-cuda-cupti-cu12-12.5.82\n",
+            "  Attempting uninstall: nvidia-cublas-cu12\n",
+            "    Found existing installation: nvidia-cublas-cu12 12.5.3.2\n",
+            "    Uninstalling nvidia-cublas-cu12-12.5.3.2:\n",
+            "      Successfully uninstalled nvidia-cublas-cu12-12.5.3.2\n",
+            "  Attempting uninstall: nvidia-cusparse-cu12\n",
+            "    Found existing installation: nvidia-cusparse-cu12 12.5.1.3\n",
+            "    Uninstalling nvidia-cusparse-cu12-12.5.1.3:\n",
+            "      Successfully uninstalled nvidia-cusparse-cu12-12.5.1.3\n",
+            "  Attempting uninstall: nvidia-cudnn-cu12\n",
+            "    Found existing installation: nvidia-cudnn-cu12 9.3.0.75\n",
+            "    Uninstalling nvidia-cudnn-cu12-9.3.0.75:\n",
+            "      Successfully uninstalled nvidia-cudnn-cu12-9.3.0.75\n",
+            "  Attempting uninstall: nvidia-cusolver-cu12\n",
+            "    Found existing installation: nvidia-cusolver-cu12 11.6.3.83\n",
+            "    Uninstalling nvidia-cusolver-cu12-11.6.3.83:\n",
+            "      Successfully uninstalled nvidia-cusolver-cu12-11.6.3.83\n",
+            "Successfully installed nvidia-cublas-cu12-12.4.5.8 nvidia-cuda-cupti-cu12-12.4.127 nvidia-cuda-nvrtc-cu12-12.4.127 nvidia-cuda-runtime-cu12-12.4.127 nvidia-cudnn-cu12-9.1.0.70 nvidia-cufft-cu12-11.2.1.3 nvidia-curand-cu12-10.3.5.147 nvidia-cusolver-cu12-11.6.1.9 nvidia-cusparse-cu12-12.3.1.170 nvidia-nvjitlink-cu12-12.4.127\n"
           ]
         }
       ],
@@ -205,10 +227,22 @@
         "dataloader = DataLoader(dataset, batch_size=128, shuffle=True)\n"
       ],
       "metadata": {
-        "id": "iqMA9a_mjVzJ"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iqMA9a_mjVzJ",
+        "outputId": "38a12335-90a8-4607-e773-6daee15e437f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 170M/170M [00:12<00:00, 13.3MB/s]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -242,7 +276,7 @@
       "metadata": {
         "id": "uN3MM0Zmjid_"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -272,10 +306,23 @@
         "  print(f\"Epoch {epoch+1}: Loss = {loss.item()}\")\n"
       ],
       "metadata": {
-        "id": "FdA_1Oqhj0yu"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FdA_1Oqhj0yu",
+        "outputId": "fd2caef5-1c8f-496c-fb25-3f0c7094fe46"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1: Loss = 0.13073135912418365\n",
+            "Epoch 2: Loss = 0.009414109401404858\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
