--- a/Contrastive_Learning.ipynb
+++ b/Contrastive_Learning.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPa6G6Nv+LXaUA6+GCvSJ1G",
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyM/tzEkhXPzhp3N7FWYZTbt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13,7 +14,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -27,13 +29,297 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#  Objective\n",
+        "The goal of this lab is to understand how contrastive learning works by implementing SimCLR,\n",
+        "a self-supervised learning framework. You will:\n",
+        "\n",
+        "1. Apply data augmentation techniques to create positive pairs.\n",
+        "2. Train a neural network using contrastive loss.\n",
+        "3. Fine-tune the pretrained model on a classification task.\n",
+        "4. Evaluate the effectiveness of contrastive learning.\n",
+        "\n",
+        "## Libraries\n",
+        "🐍 python (>=3.7)\n",
+        "\n",
+        "🔦 PyTorch\n",
+        "\n",
+        "🔦 👁 torchvision\n",
+        "\n",
+        "🤔 NumPy\n",
+        "\n",
+        "〽 Matplotlib\n",
+        "\n",
+        "🧑 scikit-learn\n",
+        "\n",
+        "# Step 1: Load and Preprocess the Dataset"
+      ],
+      "metadata": {
+        "id": "PkckS86Rzfgo"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "Bx_nLRt4zF8q"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import torch\n",
+        "import torchvision\n",
+        "import torchvision.transforms as transforms\n",
+        "from torch.utils.data import DataLoader\n",
+        "# Define data augmentations\n",
+        "train_transform = transforms.Compose([\n",
+        "    transforms.RandomResizedCrop(32),\n",
+        "    transforms.RandomHorizontalFlip(),\n",
+        "    transforms.RandomApply([transforms.ColorJitter(0.8, 0.8, 0.8, 0.2)],\n",
+        "                           p=0.8),\n",
+        "    transforms.RandomGrayscale(p=0.2),\n",
+        "    transforms.ToTensor(),\n",
+        "])\n",
+        "\n",
+        "# Load CIFAR-10 dataset\n",
+        "train_dataset = torchvision.datasets.CIFAR10(root='./data', train=True,\n",
+        "                                             transform=train_transform, download=True)\n",
+        "train_loader = DataLoader(train_dataset, batch_size=256, shuffle=True,\n",
+        "                          num_workers=4)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Step 2: Define the SimCLR Model"
+      ],
+      "metadata": {
+        "id": "XwJJSR5t0VzR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch.nn as nn\n",
+        "import torchvision.models as models\n",
+        "class SimCLR(nn.Module):\n",
+        "  def __init__(self, base_model='resnet18', projection_dim=128):\n",
+        "    super(SimCLR, self).__init__()\n",
+        "    self.encoder = models.resnet18(pretrained=False)\n",
+        "    self.encoder.fc = nn.Identity() # Remove classification head\n",
+        "    # Projection head\n",
+        "    self.projection_head = nn.Sequential(\n",
+        "        nn.Linear(512, 512),\n",
+        "        nn.ReLU(),\n",
+        "        nn.Linear(512, projection_dim)\n",
+        "        )\n",
+        "  def forward(self, x):\n",
+        "    x = self.encoder(x)\n",
+        "    x = self.projection_head(x)\n",
+        "    return x"
+      ],
+      "metadata": {
+        "id": "v-Vh-d2r0c-g"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Step 3: Define the Contrastive Loss (NT-Xent Loss)\n",
+        "\n",
+        "The **Normalized Temperature-scaled Cross-Entropy Loss (NT-Xent)** is used for contrastive\n",
+        "learning"
+      ],
+      "metadata": {
+        "id": "B_slZ7zM0ySC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch.nn.functional as F\n",
+        "def contrastive_loss(out_1, out_2, temperature=0.5):\n",
+        "  # Normalize embeddings\n",
+        "  out_1 = F.normalize(out_1, dim=1)\n",
+        "  out_2 = F.normalize(out_2, dim=1)\n",
+        "  # Compute similarity scores\n",
+        "  batch_size = out_1.shape[0]\n",
+        "  labels = torch.arange(batch_size).cuda()\n",
+        "\n",
+        "  similarity_matrix = torch.mm(out_1, out_2.T) / temperature\n",
+        "  loss = F.cross_entropy(similarity_matrix, labels)\n",
+        "  return loss"
+      ],
+      "metadata": {
+        "id": "Ic8zDysw03vY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Step 4: Train the SimCLR Model\n",
+        "Train the model using contrastive loss."
+      ],
+      "metadata": {
+        "id": "aOzz1BlW1CDA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch.optim as optim\n",
+        "# Initialize model and optimizer\n",
+        "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+        "model = SimCLR().to(device)\n",
+        "optimizer = optim.Adam(model.parameters(), lr=3e-4)\n",
+        "# Training loop\n",
+        "num_epochs = 100\n",
+        "for epoch in range(num_epochs):\n",
+        "  for (images, _) in train_loader:\n",
+        "    images = images.to(device)\n",
+        "\n",
+        "    # Generate two augmented views\n",
+        "    images_1 = train_transform(images)\n",
+        "    images_2 = train_transform(images)\n",
+        "\n",
+        "    # Forward pass\n",
+        "    out_1 = model(images_1)\n",
+        "    out_2 = model(images_2)\n",
+        "\n",
+        "    # Compute loss\n",
+        "    loss = contrastive_loss(out_1, out_2)\n",
+        "\n",
+        "    # Backpropagation\n",
+        "    optimizer.zero_grad()\n",
+        "    loss.backward()\n",
+        "    optimizer.step()\n",
+        "  print(f\"Epoch [{epoch+1}/{num_epochs}], Loss: {loss.item():.4f}\")"
+      ],
+      "metadata": {
+        "id": "ah2dYaAh1FAY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Step 5: Transfer Learning and Evaluation\n",
+        "Fine-tune the pretrained model for classification."
+      ],
+      "metadata": {
+        "id": "cQqhSs8i1bM_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Load CIFAR-10 test dataset\n",
+        "test_transform = transforms.Compose([\n",
+        "    transforms.ToTensor(),\n",
+        "    ])\n",
+        "test_dataset = torchvision.datasets.CIFAR10(root='./data', train=False,\n",
+        "                                            transform=test_transform, download=True)\n",
+        "test_loader = DataLoader(test_dataset, batch_size=256, shuffle=False,\n",
+        "                         num_workers=4)\n",
+        "# Define classifier\n",
+        "class Classifier(nn.Module):\n",
+        "  def __init__(self, base_model):\n",
+        "    super(Classifier, self).__init__()\n",
+        "    self.encoder = base_model.encoder # Use pretrained encoder\n",
+        "    self.fc = nn.Linear(512, 10) # 10 classes in CIFAR-10\n",
+        "  def forward(self, x):\n",
+        "    x = self.encoder(x)\n",
+        "    x = self.fc(x)\n",
+        "    return x\n",
+        "# Initialize classifier\n",
+        "classifier = Classifier(model).to(device)\n",
+        "optimizer = optim.Adam(classifier.parameters(), lr=3e-4)\n",
+        "criterion = nn.CrossEntropyLoss()\n",
+        "# Training classifier\n",
+        "num_epochs = 10\n",
+        "for epoch in range(num_epochs):\n",
+        "  classifier.train()\n",
+        "  for (images, labels) in train_loader:\n",
+        "    images, labels = images.to(device), labels.to(device)\n",
+        "\n",
+        "    outputs = classifier(images)\n",
+        "    loss = criterion(outputs, labels)\n",
+        "    optimizer.zero_grad()\n",
+        "    loss.backward()\n",
+        "    optimizer.step()\n",
+        "\n",
+        "  print(f\"Epoch [{epoch+1}/{num_epochs}], Loss: {loss.item():.4f}\")\n",
+        "# Evaluate classifier\n",
+        "classifier.eval()\n",
+        "correct, total = 0, 0\n",
+        "with torch.no_grad():\n",
+        "  for images, labels in test_loader:\n",
+        "    images, labels = images.to(device), labels.to(device)\n",
+        "    outputs = classifier(images)\n",
+        "    _, predicted = torch.max(outputs, 1)\n",
+        "    total += labels.size(0)\n",
+        "    correct += (predicted == labels).sum().item()\n",
+        "  accuracy = 100 * correct / total\n",
+        "  print(f\"Test Accuracy: {accuracy:.2f}%\")"
+      ],
+      "metadata": {
+        "id": "9tgIZo1w1d-Y"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Step 6: Analysis and Interpretation\n",
+        "1. Compare the test accuracy of the classifier when trained:\n",
+        "o From scratch\n",
+        "o With contrastive learning pretraining\n",
+        "2. Visualize learned embeddings using t-SNE."
+      ],
+      "metadata": {
+        "id": "Tcvc65PL3SeS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.manifold import TSNE\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "# Extract embeddings\n",
+        "classifier.eval()\n",
+        "embeddings, labels_list = [], []\n",
+        "with torch.no_grad():\n",
+        "  for images, labels in test_loader:\n",
+        "    images, labels = images.to(device), labels.to(device)\n",
+        "    features = classifier.encoder(images)\n",
+        "    embeddings.append(features.cpu().numpy())\n",
+        "    labels_list.append(labels.cpu().numpy())\n",
+        "# Convert to numpy\n",
+        "embeddings = np.concatenate(embeddings, axis=0)\n",
+        "labels_list = np.concatenate(labels_list, axis=0)\n",
+        "# Reduce dimensions\n",
+        "tsne = TSNE(n_components=2, perplexity=30, random_state=42)\n",
+        "embeddings_2d = tsne.fit_transform(embeddings)\n",
+        "# Plot embeddings\n",
+        "plt.figure(figsize=(10, 6))\n",
+        "scatter = plt.scatter(embeddings_2d[:, 0], embeddings_2d[:, 1],\n",
+        "c=labels_list, cmap='tab10', alpha=0.7)\n",
+        "plt.legend(*scatter.legend_elements(), title=\"Classes\")\n",
+        "plt.title(\"t-SNE Visualization of Embeddings\")\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "0SyplN2U3Wdh"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
