training the model

--- a/Contrastive_Learning.ipynb
+++ b/Contrastive_Learning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyM/tzEkhXPzhp3N7FWYZTbt",
+      "authorship_tag": "ABX9TyO+QBsa6ULKNRU4zf+7yVjb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,11 +61,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "Bx_nLRt4zF8q"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Bx_nLRt4zF8q",
+        "outputId": "ad1709cc-2c92-46d4-88a0-a721a1f6a2d1"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 170M/170M [00:54<00:00, 3.11MB/s]\n",
+            "/usr/local/lib/python3.11/dist-packages/torch/utils/data/dataloader.py:624: UserWarning: This DataLoader will create 4 worker processes in total. Our suggested max number of worker in current system is 2, which is smaller than what this DataLoader is going to create. Please be aware that excessive worker creation might get DataLoader running slow or even freeze, lower the worker number to avoid potential slowness/freeze if necessary.\n",
+            "  warnings.warn(\n"
+          ]
+        }
+      ],
       "source": [
         "import torch\n",
         "import torchvision\n",
@@ -121,7 +135,7 @@
       "metadata": {
         "id": "v-Vh-d2r0c-g"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -155,7 +169,7 @@
       "metadata": {
         "id": "Ic8zDysw03vY"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -173,7 +187,7 @@
       "source": [
         "import torch.optim as optim\n",
         "# Initialize model and optimizer\n",
-        "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+        "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"t4\")\n",
         "model = SimCLR().to(device)\n",
         "optimizer = optim.Adam(model.parameters(), lr=3e-4)\n",
         "# Training loop\n",
@@ -183,8 +197,12 @@
         "    images = images.to(device)\n",
         "\n",
         "    # Generate two augmented views\n",
-        "    images_1 = train_transform(images)\n",
-        "    images_2 = train_transform(images)\n",
+        "    # The train_transform is called on the CPU\n",
+        "    # before moving to the device to avoid the error\n",
+        "    images_1 = torch.stack([train_transform(transforms.ToPILImage()(image.cpu())) for image in images]).to(device)\n",
+        "    images_2 = torch.stack([train_transform(transforms.ToPILImage()(image.cpu())) for image in images]).to(device)\n",
+        "\n",
+        "\n",
         "\n",
         "    # Forward pass\n",
         "    out_1 = model(images_1)\n",
@@ -200,10 +218,27 @@
         "  print(f\"Epoch [{epoch+1}/{num_epochs}], Loss: {loss.item():.4f}\")"
       ],
       "metadata": {
-        "id": "ah2dYaAh1FAY"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ah2dYaAh1FAY",
+        "outputId": "062654e3-aadd-43f3-9067-9b6c6a3f1c55"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.11/dist-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
+            "  warnings.warn(\n",
+            "/usr/local/lib/python3.11/dist-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=None`.\n",
+            "  warnings.warn(msg)\n",
+            "/usr/local/lib/python3.11/dist-packages/torch/utils/data/dataloader.py:624: UserWarning: This DataLoader will create 4 worker processes in total. Our suggested max number of worker in current system is 2, which is smaller than what this DataLoader is going to create. Please be aware that excessive worker creation might get DataLoader running slow or even freeze, lower the worker number to avoid potential slowness/freeze if necessary.\n",
+            "  warnings.warn(\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
