--- a/Contrastive_Learning.ipynb
+++ b/Contrastive_Learning.ipynb
@@ -237,6 +237,14 @@
             "/usr/local/lib/python3.11/dist-packages/torch/utils/data/dataloader.py:624: UserWarning: This DataLoader will create 4 worker processes in total. Our suggested max number of worker in current system is 2, which is smaller than what this DataLoader is going to create. Please be aware that excessive worker creation might get DataLoader running slow or even freeze, lower the worker number to avoid potential slowness/freeze if necessary.\n",
             "  warnings.warn(\n"
           ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch [1/100], Loss: 3.6999\n",
+            "Epoch [2/100], Loss: 3.6923\n"
+          ]
         }
       ]
     },
