ran into an error while fliping and rotating images

--- a/Unsupervised_Learning_in_CV.ipynb
+++ b/Unsupervised_Learning_in_CV.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1EbiBSLOj7scfaN42YoFm-jxuTIHTfbk_",
-      "authorship_tag": "ABX9TyPlLAC2meVFEIZ0W3MrTZ0F",
+      "authorship_tag": "ABX9TyPaqWtFFWqCH97wQuM8nbdy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,20 +57,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "C1_7rYLHmAmP",
-        "outputId": "8e9078fe-fc4d-4378-f65e-4d38027781c7"
+        "outputId": "59b02238-1ccf-41c9-a40a-51fda564234a"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
       ],
@@ -91,9 +91,6 @@
         "import matplotlib.pyplot as plt\n",
         "import shutil\n",
         "import zipfile\n",
-        "\n",
-        "# Mount Google Drive\n",
-        "drive.mount('/content/drive')\n",
         "\n",
         "# Define the source directory containing the zip files\n",
         "source_dir = '/content/drive/MyDrive/DL4CV'\n",
@@ -122,9 +119,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HW6OWWSYoqEj",
-        "outputId": "b1d1300f-09dd-451f-ace6-495bda1735e3"
+        "outputId": "412a085b-94c9-4d27-9012-507d51f118e6"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -174,9 +171,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "V2NVZ1OO13Zo",
-        "outputId": "4b3262dc-9882-4f18-d835-d2cba403ea96"
+        "outputId": "2dc09035-4e28-4806-e1b4-837a3b13b87d"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -223,9 +220,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "o9E4NvkB2YE4",
-        "outputId": "ab9340f8-5257-44f2-efca-f700b0a07a2c"
+        "outputId": "ced16ead-729a-4434-f474-44d5a7e3db3f"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -265,7 +262,7 @@
       "metadata": {
         "id": "vLZH4BUFpU7c"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -380,7 +377,7 @@
         "import tensorflow as tf\n",
         "import random\n",
         "\n",
-        "def load_and_normalize_images(folder_path = \"content/train\", image_size = (128, 128)):\n",
+        "def load_and_normalize_images(folder_path = train_folder, image_size = (128, 128)):\n",
         "  \"\"\"\n",
         "  Loads .jpg images from the folder\n",
         "    converts some to greyscale images\n",
@@ -411,13 +408,15 @@
         "\n",
         "  return images, filenames\n",
         "\n",
-        "def augment_image(image, filename):\n",
+        "def augment_image(image, filename, target_size = (128, 128)):\n",
         "  \"\"\"\n",
         "  applies data augmentation techniques (flipping, rotating) on images\n",
+        "  and ensures all outputs are (128, 128)\n",
         "\n",
         "  args:\n",
         "    images (np array): a single greyscale image\n",
         "    filename (str): The original filename.\n",
+        "    target_size (tuple): Desired output shape (default: 128x128).\n",
         "\n",
         "  returns:\n",
         "    augmented_images (list): list of augmented images\n",
@@ -426,31 +425,40 @@
         "  augmented_images = [image] # the original image is added to begin the list\n",
         "  augmented_labels = [filename] # the image lables\n",
         "\n",
+        "  # ---- Flipping Images ----\n",
         "  # horizontal flip\n",
         "  if random.choice([True, False]):\n",
-        "    augmented_images.append(cv2.flip(image, 1))\n",
+        "    flipped = cv2.flip(image, 1)\n",
+        "    flipped = cv2.resize(flipped, target_size)\n",
+        "    augmented_images.append(flipped)\n",
         "    augmented_labels.append(filename + \"_flipH\")\n",
         "\n",
         "  # vertical flip\n",
         "  if random.choice([True, False]):\n",
-        "    augmented_images.append(cv2.flip(image, 0))\n",
+        "    flipped = cv2.flip(image, 0)\n",
+        "    flipped = cv2.resize(flipped, target_size)\n",
+        "    augmented_images.append(flipped)\n",
         "    augmented_labels.append(filename + \"_flipV\")\n",
+        "\n",
+        "  # ---- Rotating Images ----\n",
         "\n",
         "  # random rotation\n",
         "  rotation_choice = random.choice([0, 90, 180, 270])\n",
-        "  if rotation_choice == 90:\n",
-        "        augmented_images.append(cv2.rotate(image, cv2.ROTATE_90_CLOCKWISE))\n",
-        "        augmented_labels.append(filename + \"_rot90\")\n",
-        "    elif rotation_choice == 180:\n",
-        "        augmented_images.append(cv2.rotate(image, cv2.ROTATE_180))\n",
-        "        augmented_labels.append(filename + \"_rot180\")\n",
-        "    elif rotation_choice == 270:\n",
-        "        augmented_images.append(cv2.rotate(image, cv2.ROTATE_90_COUNTERCLOCKWISE))\n",
-        "        augmented_labels.append(filename + \"_rot270\")\n",
+        "  if rotation_choice != 0:  # Skip if no rotation\n",
+        "        if rotation_choice == 90:\n",
+        "            rotated = cv2.rotate(image, cv2.ROTATE_90_CLOCKWISE)\n",
+        "        elif rotation_choice == 180:\n",
+        "            rotated = cv2.rotate(image, cv2.ROTATE_180)\n",
+        "        elif rotation_choice == 270:\n",
+        "            rotated = cv2.rotate(image, cv2.ROTATE_90_COUNTERCLOCKWISE)\n",
+        "\n",
+        "        rotated = cv2.resize(rotated, target_size)  # Force resize\n",
+        "        augmented_images.append(rotated)\n",
+        "        augmented_labels.append(filename + f\"_rot{rotation_choice}\")\n",
         "\n",
         "  return augmented_images, augmented_labels\n",
         "\n",
-        "def augment_dataset(images, filenames):\n",
+        "def augment_dataset(images, filenames, target_size =(128, 128)):\n",
         "  \"\"\"\n",
         "    Applies random augmentation to the entire dataset.\n",
         "\n",
@@ -464,12 +472,12 @@
         "  augmented_images = []\n",
         "  augmented_labels = []\n",
         "\n",
-        "  for img, fname in zip(images, label):\n",
-        "    aug_imgs, aug_labels = augment_image(img, fname)\n",
+        "  for img, fname in zip(images, filenames):\n",
+        "    aug_imgs, aug_labels = augment_image(img, fname, target_size)\n",
         "    augmented_images.extend(aug_imgs)\n",
         "    augmented_labels.extend(aug_labels)\n",
         "\n",
-        "  return np.array(augmented_images).astype(\"float32\"), np.array(augmented_labels)\n",
+        "  return np.array(augmented_images, dtype=\"float32\"), np.array(augmented_labels)\n",
         "\n",
         "\n",
         "def convert_to_keras_dataset(images, labels, save_path = \"content/train.keras\"):\n",
@@ -488,8 +496,75 @@
       "metadata": {
         "id": "CYbi9BsSqvEN"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Following this Error\n",
+        "\n",
+        "```bash\n",
+        "---------------------------------------------------------------------------\n",
+        "ValueError                                Traceback (most recent call last)\n",
+        "<ipython-input-12-ab93e3430d7f> in <cell line: 0>()\n",
+        "      1 images, filenames = load_and_normalize_images()  # Load images\n",
+        "----> 2 augmented_images = augment_dataset(images, filenames)  # Augment dataset\n",
+        "      3\n",
+        "      4 # split to 80:20 training:validation dataset\n",
+        "      5 train_images, val_images, train_labels, val_labels = train_test_split(\n",
+        "\n",
+        "<ipython-input-11-4664164b5ce8> in augment_dataset(images, filenames)\n",
+        "     91     augmented_labels.extend(aug_labels)\n",
+        "     92\n",
+        "---> 93   return np.array(augmented_images).astype(\"float32\"), np.array(augmented_labels)\n",
+        "     94\n",
+        "     95\n",
+        "\n",
+        "ValueError: setting an array element with a sequence. The requested array has an inhomogeneous shape after 3 dimensions. The detected shape was (354, 128, 128) + inhomogeneous part.\n",
+        "```\n",
+        "\n",
+        "I need to `resize` augmented images. *why?*\n",
+        "\n",
+        "## 1. Guaranteed Consistency\n",
+        "\n",
+        "- Every augmented image (flipped/rotated) is resized to (128, 128) immediately after transformation.\n",
+        "\n",
+        "- Eliminates shape mismatches (e.g., `90° rotations` that `swap width/height`).\n",
+        "\n",
+        "## 2. Normalization\n",
+        "\n",
+        "If your input images are already normalized (e.g., pixel values in [0, 1]), resizing with cv2.resize preserves this (uses linear interpolation by default).\n",
+        "\n",
+        "## 3. Debugging-Friendly\n",
+        "\n",
+        "- No more ValueError from inhomogeneous shapes.\n",
+        "\n",
+        "**Confirming** Use print(image.shape) inside augment_image() to verify all outputs are (128, 128).\n",
+        "\n",
+        "how to confirm:\n",
+        "```python\n",
+        "# Load original images (assumed to be 128x128)\n",
+        "images, filenames = load_and_normalize_images()  \n",
+        "\n",
+        "# Augment (outputs will all be 128x128)\n",
+        "aug_images, aug_labels = augment_dataset(images, filenames)  \n",
+        "\n",
+        "# Verify shapes\n",
+        "print(\"Augmented images shape:\", aug_images.shape)  # Expected: (N, 128, 128)\n",
+        "print(\"Sample label:\", aug_labels[0])  # e.g., \"crack_001.jpg_flipH\"\n",
+        "```\n",
+        "\n",
+        "# Why This Works\n",
+        "1. cv2.resize() `Overrides All Shapes`: Even if a rotation/flip temporarily changes dimensions, resizing forces them back to (128, 128).\n",
+        "\n",
+        "2. Efficiency: Resizing is fast and happens on-the-fly during augmentation.\n",
+        "\n",
+        "3. Compatibility: Works seamlessly with train_test_split() or PyTorch/TensorFlow pipelines."
+      ],
+      "metadata": {
+        "id": "UFlwQhp4fVlG"
+      }
     },
     {
       "cell_type": "code",
@@ -511,10 +586,28 @@
         "convert_to_keras_dataset(test_images, test_labels, \"test_road_cracks.keras\")"
       ],
       "metadata": {
-        "id": "7rrZi8PynKFs"
+        "id": "7rrZi8PynKFs",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 365
+        },
+        "outputId": "a744d333-c77f-46cc-e40a-45fd04a2b80c"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "setting an array element with a sequence. The requested array has an inhomogeneous shape after 3 dimensions. The detected shape was (346, 128, 128) + inhomogeneous part.",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-19-ab93e3430d7f>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mimages\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfilenames\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_and_normalize_images\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# Load images\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0maugmented_images\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0maugment_dataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimages\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfilenames\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# Augment dataset\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# split to 80:20 training:validation dataset\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m train_images, val_images, train_labels, val_labels = train_test_split(\n",
+            "\u001b[0;32m<ipython-input-17-b1c8ec396816>\u001b[0m in \u001b[0;36maugment_dataset\u001b[0;34m(images, filenames, target_size)\u001b[0m\n\u001b[1;32m    102\u001b[0m     \u001b[0maugmented_labels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mextend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maug_labels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    103\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 104\u001b[0;31m   \u001b[0;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maugmented_images\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"float32\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maugmented_labels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    105\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    106\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: setting an array element with a sequence. The requested array has an inhomogeneous shape after 3 dimensions. The detected shape was (346, 128, 128) + inhomogeneous part."
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
